<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_date_desc" android:title="@string/sort_date_newest" />
            <item android:id="@+id/sort_date_asc" android:title="@string/sort_date_oldest" />
            <item android:id="@+id/sort_name_asc" android:title="@string/sort_name" />
            <item android:id="@+id/sort_duration" android:title="@string/sort_duration" />
            <item android:id="@+id/sort_size" android:title="@string/sort_size" />
        </menu>
    </item>

</menu>
